--- a/styles.css
+++ b/styles.css
@@ -63,30 +63,32 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 100%;
+}
+
+.current-pressure {
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .scale {
-    width: 20px;
-    height: 200px;
-    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    width: 100%;
     position: relative;
 }
 
-.bar {
-    width: 100%;
-    height: 0;
-    background-color: blue;
-    position: absolute;
-    bottom: 0;
+.scale span {
+    flex: 1;
+    text-align: center;
 }
 
-.scale-labels {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 200px;
+.bar {
+    height: 20px;
+    background-color: blue;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 
 .buttons {
